--- a/app/src/main/res/layout/dog_items.xml
+++ b/app/src/main/res/layout/dog_items.xml
@@ -1,33 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/llDog"
-    android:padding="20dp"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
-    <ImageView
-        android:id="@+id/imgDog"
-        android:layout_width="200dp"
-        android:layout_height="200dp">
-    </ImageView>
+    android:layout_gravity="center_horizontal"
+    android:layout_margin="8dp"
+    android:background="@color/white"
+    app:cardCornerRadius="10dp">
 
-    <TextView
-        android:id="@+id/tvDogName"
+    <LinearLayout
+        android:id="@+id/layout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="DogName"
-        android:textColor="@color/black"
-        android:textSize="30sp"
-        android:textStyle="bold" />
+        android:background="@color/white"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvDogOrigin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Orign"
-        android:textColor="@color/black"
-        android:textSize="15sp" />
+        <ImageView
+            android:id="@+id/imgDog"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:scaleType="centerCrop" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tvDogName"
+                android:layout_width="150dp"
+                android:layout_height="50dp"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="2dp"
+                android:text="DogName"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:id="@+id/layoutUnlike"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true">
+
+                <ImageView
+                    android:id="@+id/btnUnlike"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_marginEnd="5dp"
+                    android:background="@drawable/not_like" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layoutLike"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:visibility="gone">
+
+                <ImageView
+                    android:id="@+id/btnLike"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_marginEnd="5dp"
+                    android:background="@drawable/like" />
+            </LinearLayout>
+
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/tvDogOrigin"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_marginStart="2dp"
+            android:text="..."
+            android:textColor="@color/black"
+            android:textSize="15dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layout2"
+        android:layout_width="190dp"
+        android:layout_height="261dp"
+
+        android:background="#454141"
+        android:gravity="center_vertical"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp">
+
+            <TextView
+                android:textColor="@color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Name: " />
+
+            <TextView
+                android:textColor="@color/white"
+                android:id="@+id/layout2_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Toy" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:orientation="horizontal"
+
+            >
+
+            <TextView
+                android:textColor="@color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Life span: " />
+
+            <TextView
+                android:textColor="@color/white"
+                android:id="@+id/layout2_life_span"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="10 - 12 years" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:textColor="@color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Origin: " />
+
+            <TextView
+                android:textColor="@color/white"
+                android:id="@+id/layout2_origin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Germany, France" />
+        </LinearLayout>
+
+    </LinearLayout>
 
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
